🎉 feat: adding projects, about and speaking pages as well as updating styles
BREAKING CHANGE 🚨: First steps in overhauling my website.

--- a/content/notes/Neurodiversity.mdx
+++ b/content/notes/Neurodiversity.mdx
@@ -2,12 +2,14 @@
 title: Neurodiversity
 date: 2021-12-05T10:40
 slug: neurodiversity
-aliases: 
+aliases:
 tags:
-  - 
+  -
 stage: seedling
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 [What is neurodiversity?](https://www.neurodiversityhub.org/what-is-neurodiversity)
 
-👷🏼 ***under construction*** 🔨
+<StillGrowing />
