--- a/content/resume/work-history.mdx
+++ b/content/resume/work-history.mdx
@@ -13,9 +13,8 @@
 
 <!-- -->
 
-- <span>Video Editor and Motion Designer</span> at Idleglance (<em>
-    YouTube Channel
-  </em>) — 2018-2019
+- <span>Video Editor and Motion Designer</span> at Idleglance (_YouTube Channel_)
+  — 2018-2019
 
 > Delivered music video edits with audio syncing, motion graphics, titles, audio and special effects.
 
