🐛 fix(speaking): removing links for internal talks

--- a/content/speaking/talks.mdx
+++ b/content/speaking/talks.mdx
@@ -1,4 +1,4 @@
 # Talks
 
-1. [Portable Hour](https://portable.com.au/): [Neurodiversity in our work and workplace](https://drive.google.com/file/d/1DbT650Tf77OWeUEiwxkGTty5fklmjy9e/view?usp=sharing)
-2. [PTX](https://portable.com.au/technology): [Thinking Traps](https://drive.google.com/file/d/1Xiw3rJREWWLpFVH4IoqobZBPdrpZVkNO/view?usp=sharing)
+1. Portable Hour (internal): Neurodiversity in our work and workplace
+2. PTX (internal): Thinking Traps
