📜 docs(digital-garden): adding and updating digital garden notes

--- a/content/notes/Index Notes.mdx
+++ b/content/notes/Index Notes.mdx
@@ -11,4 +11,8 @@ tags:
 stage: budding
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 Index notes are a starting point to falling down the rabbit hole, allowing you to navigate your [[Zettelkasten]] and find ideas when you need them.
+
+<StillGrowing />
