--- a/content/notes/Zettelkasten.mdx
+++ b/content/notes/Zettelkasten.mdx
@@ -12,6 +12,8 @@ tags:
 stage: evergreen
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 > The zettelkasten is a method of note-taking and personal knowledge management
 
 The direct translation of zettelkasten is slip-box, a place to keep & sort your notes.
@@ -50,3 +52,5 @@ Don't just copy them, mold them to fit each other and the piece of content.
 > Translate them into something coherent and embed them into the context of your argument while you build your argument out of the notes at the same time. Detect holes in your argument, fill them or change your argument.
 
 — Sönke Ahrens
+
+<StillGrowing />
