--- a/content/notes/Atomic.mdx
+++ b/content/notes/Atomic.mdx
@@ -10,8 +10,12 @@ tags:
 stage: budding
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 > A single irreducible unit or component in a larger system.
 
 — Oxford dictionary
 
 For example, an atomic note would be only describing a singular ideas or concept. An atomic habit would be a regular practice that is small and easy to do.
+
+<StillGrowing />
