--- a/content/notes/Executive function.mdx
+++ b/content/notes/Executive function.mdx
@@ -8,6 +8,8 @@ tags:
 stage: seedling
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 The mental processes people rely on to self regulate. The executive functions enable a person to control their thoughts, words, actions and emotions. They also assist them to perceive and manage time, and to direct and manage their behaviour over time.
 
 In [[ADHD]] brains the prefrontal cortex, the part of the brain that controls executive function, develops 30% slower, this translates to being about 3-6 years behind [[Neurotypical]] brains. Even once it has fully developed it is still impaired.
@@ -36,3 +38,5 @@ In [[ADHD]] brains the prefrontal cortex, the part of the brain that controls ex
 > Is this actually about effort or an executive function issue?
 
 — Jessica McCabe in [What is Executive Function and Why Do We Need it?](https://www.youtube.com/watch?v=H4YIHrEu-TU)
+
+<StillGrowing />
