--- a/content/notes/Literature Notes.mdx
+++ b/content/notes/Literature Notes.mdx
@@ -11,6 +11,8 @@ tags:
 stage: budding
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 When you consume content take notes of what you don't want to forget or what you want to use in your own writing.
 
 Make sure your notes are [[Atomic]], in the smallest form they can possibly be. This is so you can combine your literature notes into [[Permanent notes]] without their being overlap or redundancy.
@@ -18,3 +20,5 @@ Make sure your notes are [[Atomic]], in the smallest form they can possibly be. 
 Be extremely selective in what you take notes on, make sure that it is relevant to things to care about or what to write about. And be even more selective with adding quotes, as you don't want to use that as a crutch for your lack of understanding.
 
 Make sure to include the bibliographic details, author & source at the very least, so you know where you got the idea from.
+
+<StillGrowing />
