--- a/content/notes/Permanent Notes.mdx
+++ b/content/notes/Permanent Notes.mdx
@@ -11,6 +11,8 @@ tags:
 stage: budding
 ---
 
+import StillGrowing from '../../src/components/garden/still-growing';
+
 Everyday you should go through your inbox and seek to refine the [[Fleeting notes]] & [[Literature notes]] that you've taken. Making connections and turning them into permanent notes.
 
 Ideally this should happen roughly everyday so that you don't forget the conceptual ideas behind the notes.
@@ -45,3 +47,5 @@ Your permanent notes should only encompass a single idea, so as not to cause ove
   - precise;
   - clear;
   - and brief as you can be.
+
+<StillGrowing />
