--- a/content/resume/contact-details.mdx
+++ b/content/resume/contact-details.mdx
@@ -1,4 +1,3 @@
-import styled from 'styled-components';
 import {
   FaEnvelope,
   FaPhoneAlt,
@@ -8,59 +7,38 @@ import {
   FaGithub,
 } from 'react-icons/fa';
 import { Link } from '../../src/components/link';
-
-export const ContactDetails = styled.div`
-  display: grid;
-  grid-template-columns: repeat(1, max-content);
-  grid-template-rows: repeat(6, max-content);
-  gap: 1em;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  svg {
-    display: inline;
-    vertical-align: top;
-    font-size: 1.125rem;
-    color: var(--dark);
-    transition: color 200ms ease-out;
-  }
-  @media (min-width: 90em) {
-    grid-template-columns: repeat(2, max-content);
-    grid-template-rows: repeat(3, max-content);
-  }
-`;
-
-export const P = styled.p`
-  line-height: 1.15;
-`;
+import {
+  ContactDetails,
+  Paragraph,
+} from '../../src/components/resume/contact-details';
 
 <ContactDetails>
-  <P>
+  <Paragraph>
     <Link href="mailto:hello@ellyloel.com">
       <FaEnvelope /> hello@ellyloel.com
     </Link>
-  </P>
-  <P>
+  </Paragraph>
+  <Paragraph>
     <Link href="tel:+61435900094">
       <FaPhoneAlt /> 0435 900 094
     </Link>
-  </P>
-  <P>
+  </Paragraph>
+  <Paragraph>
     <FaHome /> South Yarra, Victoria
-  </P>
-  <P>
+  </Paragraph>
+  <Paragraph>
     <Link href="https://www.ellyloel.com">
       <FaDesktop /> www.ellyloel.com
     </Link>
-  </P>
-  <P>
+  </Paragraph>
+  <Paragraph>
     <Link href="http://linkedin.ellyloel.com">
       <FaLinkedin /> linkedin.ellyloel.com
     </Link>
-  </P>
-  <P>
+  </Paragraph>
+  <Paragraph>
     <Link href="http://github.ellyloel.com">
       <FaGithub /> github.ellyloel.com
     </Link>
-  </P>
+  </Paragraph>
 </ContactDetails>
