--- a/data/notes/Atomic.mdx
+++ b/data/notes/Atomic.mdx
@@ -10,10 +10,13 @@ tags:
 stage: budding
 ---
 
-> A single irreducible unit or component in a larger system.
-
-— Oxford dictionary
-
-For example, an atomic note would be only describing a singular ideas or concept. An atomic habit would be a regular practice that is small and easy to do.
+<figure>
+  > A single irreducible unit or component in a larger system.
+  <figcaption>
+    — <cite>Oxford dictionary</cite>
+  </figcaption>
+</figure>
+For example, an atomic note would be only describing a singular ideas or concept.
+An atomic habit would be a regular practice that is small and easy to do.
 
 <StillGrowing />
