--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,7 +1,18 @@
-#About
+import { styled } from "../stitches.config";
 
-Well hello there! My name is Elly Loel. I'm a developer, designer and writer, currently working as a junior developer at Portable! 
+export const Article = styled("article", {
+  display: "flex",
+  flexDirection: "column",
+  gap: "$size5",
+});
+
+<Article>
+# About
+
+Well hello there! My name is Elly Loel. I'm a developer, designer and writer, currently working as a junior developer at Portable!
 
 I run a newsletter and love sharing interesting things to help people become better coders! In my spare time, I love building mechanical keyboards, watching cartoons and anime, and hanging out with my partner Brodie and our cat Lulu. 🐈‍⬛
 
-You might have heard me on the Scrimba podcast with Alex Booker or seen me in Portable’s How to land your first tech job event.
+You might have heard me on the Scrimba podcast with Alex Booker or seen me in Portable's How to land your first tech job event.
+
+</Article>
