--- a/src/404.md
+++ b/src/404.md
@@ -1,5 +1,6 @@
 ---
 layout: base-without-header
+permalink: 404.html
 ---
 
 ![A digital drawing of me, a blonde woman in a white sweater asleep with z's above my head and drool coming out of my mouth.](./public/assets/img/sleepy.png)
