--- a/src/til/d3.md
+++ b/src/til/d3.md
@@ -1,5 +1,7 @@
 ---
 title: D3
+created: 2022-09-06
+modified: 2022-09-06
 ---
 
 Learnt a bit about [D3.js](https://d3js.org/) today, specifically [force-directed graphs](https://observablehq.com/@d3/disjoint-force-directed-graph?collection=@d3/d3-force).
