--- a/src/input/content/pages/404.md
+++ b/src/input/content/pages/404.md
@@ -4,6 +4,6 @@ permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
-![A digital drawing of me, a blonde woman in a white sweater asleep with z's above my head and drool coming out of my mouth.](./src/assets/img/sleepy.png)
+# Whoops! Looks like this page doesn't exist 😢
 
-# Whoops! Looks like this page doesn't exist :cry:
+![A digital drawing of me, a blonde woman in a white sweater asleep with z's above my head and drool coming out of my mouth.](./src/assets/img/sleepy.png){style="width: var(--size-header-2);"}
