--- a/src/input/content/pages/404.md
+++ b/src/input/content/pages/404.md
@@ -6,4 +6,4 @@ eleventyExcludeFromCollections: true
 
 # Whoops! Looks like this page doesn't exist 😢
 
-![A digital drawing of me, a blonde woman in a white sweater asleep with z's above my head and drool coming out of my mouth.](./src/assets/img/sleepy.png){style="width: var(--size-header-2);"}
+{% image "./src/assets/img/sleepy.png", "A digital drawing of me, a blonde woman in a white sweater asleep with z's above my head and drool coming out of my mouth.", undefined, true, undefined, undefined, "[ header-width ]" %}
