- Rename "Blog" collection to "Essays" - Remove "TIL" collection - Update collection references in eleventy.config.cjs - Add stage icons to tags - Update garden page layout and description - Reorganize page navigation structure - Update parent/child relationships - Adjust navigation order - Improve sitemap layout - Update footer navigation structure - Enhance footer styling - Update feed templates - Modify tag filtering in feeds - Remove archived content handling

--- a/src/input/content/garden/d3.md
+++ b/src/input/content/garden/d3.md
@@ -1,5 +1,11 @@
 ---
 title: D3
+tags:
+  - Seedling
+  - Notes
+  - Data Viz
+  - SVG
+  - JavaScript
 created: 2022-09-06
 modified: 2022-09-06
 ---
