Refactoring plugins and shortcodes, enhancing webmentions handling, and improving dialog interactions. Removed unused feedBlock shortcode, updated webmentions to support multiple domains, and refined settings dialog styles. Adjusted graph rendering and added accessibility features for better user experience.

--- a/src/input/content/garden/d3.md
+++ b/src/input/content/garden/d3.md
@@ -17,4 +17,6 @@ I setup a graph view on post hub pages, to visualise posts and links between pos
 
 Here's what it looks like:
 
+{%- rollup "src/input/js/graph.js" | url -%}
+
 <div id="graph"></div>
